added overview pages for all games and players

--- a/GameYamWeb/Views/Shared/_Layout.cshtml
+++ b/GameYamWeb/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Player" asp-action="Profile">Profile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Player" asp-action="Index">Profile</a>
                         </li>
                     </ul>
                 </div>
