--- a/GameYamWeb/Views/Shared/_Layout.cshtml
+++ b/GameYamWeb/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Player" asp-action="Index">Profile</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="Index">Game</a>
+                        </li>
                     </ul>
                 </div>
             </div>
