--- a/GameYamWeb/Views/Shared/_Pager.cshtml
+++ b/GameYamWeb/Views/Shared/_Pager.cshtml
@@ -8,27 +8,27 @@
             @if(Model.CurrentPage > 1)
             {
                  <li class="page-item">
-                    <a class="page-link" asp-controller="Player" asp-action="Index" asp-route-pg="@(1)"> first </a>
+                    <a class="page-link" asp-action="Index" asp-route-pg="@(1)"> first </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Player" asp-action="Index" asp-route-pg="@(Model.CurrentPage-1)"> previous </a>
+                    <a class="page-link" asp-action="Index" asp-route-pg="@(Model.CurrentPage-1)"> previous </a>
                 </li>
             }
 
             @for (var pge = Model.StartPage; pge <= Model.EndPage; pge++)
             {
                 <li class="page-item @(pge == Model.CurrentPage ? "active" : "")">
-                    <a class="page-link" asp-controller="Player" asp-action="Index" asp-route-pg="@pge"> @pge </a>
+                    <a class="page-link" asp-action="Index" asp-route-pg="@pge"> @pge </a>
                 </li>
             }
 
             @if (Model.CurrentPage < Model.TotalPages)
             {
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Player" asp-action="Index" asp-route-pg="@(Model.CurrentPage+1)"> next </a>
+                    <a class="page-link" asp-action="Index" asp-route-pg="@(Model.CurrentPage+1)"> next </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Player" asp-action="Index" asp-route-pg="@(Model.TotalPages)"> Last </a>
+                    <a class="page-link" asp-action="Index" asp-route-pg="@(Model.TotalPages)"> Last </a>
                 </li>
             }
         </ul>
