--- a/GameYamWeb/Views/Game/Edit.cshtml
+++ b/GameYamWeb/Views/Game/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model GameModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <h1>Game</h1>
-<hr />
 
+<hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -13,16 +13,16 @@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-danger" />
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <span asp-validation-for="Description" class="text-danger" />
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" asp-action="Create" />
+                <input type="submit" value="Edit" class="btn btn-primary" asp-action="Edit" />
             </div>
         </form>
     </div>
