--- a/GameYamWeb/Views/Account/Login.cshtml
+++ b/GameYamWeb/Views/Account/Login.cshtml
@@ -1,5 +1,34 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model AccountModel
 @{
+    ViewData["Title"] = "Register";
 }
+
+<h1>Login</h1>
+<hr />
+
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="LoginInput" class="control-label"></label>
+                <input asp-for="LoginInput" class="form-control" />
+                <span asp-validation-for="LoginInput" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Login" class="btn btn-primary" asp-action="Login" />
+            </div>
+
+            <p>
+                <a asp-action="Register" class="btn btn-m btn-secondary ml-1">Register</a>
+            </p>
+        </form>
+    </div>
+</div>
+
